# ai-jukebox

./: .gitignore  pyproject.toml  requirements.txt
src/aijukebox/: api.py  hello.py
src/aijukebox/static/: test.html
