[project]
name = "aijukebox"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0,<3.13"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
dependencies = [
    "diffrhythm",
    "fastapi[standard]>=0.115.11",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

[project.scripts]
api = "aijukebox.api:main"

[tool.uv.sources]
diffrhythm = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

